  chez Jamespot via Mike McCandless)

* LUCENE-2200: Several final classes had non-overriding protected
  members. These were converted to private and unused protected
  constructors removed.  (Steven Rowe via Robert Muir)

* LUCENE-2240: SimpleAnalyzer and WhitespaceAnalyzer now have
  Version ctors.  (Simon Willnauer via Uwe Schindler)

Bug fixes

* LUCENE-2092: BooleanQuery was ignoring disableCoord in its hashCode
  and equals methods, cause bad things to happen when caching
  BooleanQueries.  (Chris Hostetter, Mike McCandless)

* LUCENE-2095: Fixes: when two threads call IndexWriter.commit() at
  the same time, it's possible for commit to return control back to
  one of the threads before all changes are actually committed.
  (Sanne Grinovero via Mike McCandless)

* LUCENE-2119: Don't throw NegativeArraySizeException if you pass
  Integer.MAX_VALUE as nDocs to IndexSearcher search methods.  (Paul
  Taylor via Mike McCandless)

* LUCENE-2132: Fix the demo result.jsp to use QueryParser with a 
  Version argument.  (Brian Li via Robert Muir)

* LUCENE-2142: FieldCacheImpl.getStringIndex no longer throws an
  exception when term count exceeds doc count.  (Mike McCandless)

* LUCENE-2166: Don't incorrectly keep warning about the same immense
  term, when IndexWriter.infoStream is on.  (Mike McCandless)

* LUCENE-2104: NativeFSLock.release() would silently fail if the lock is held by 
  another thread/process.  (Shai Erera via Uwe Schindler)

* LUCENE-2158: At high indexing rates, NRT reader could temporarily
  lose deletions.  (Mike McCandless)
  
* LUCENE-2182: DEFAULT_ATTRIBUTE_FACTORY was failing to load
  implementation class when interface was loaded by a different
  class loader.  (Uwe Schindler, reported on java-user by Ahmed El-dawy)

* LUCENE-2216: OpenBitSet.hashCode returned different hash codes for
  sets that only differed by trailing zeros. (Dawid Weiss, yonik)

* LUCENE-2235: Implement missing PerFieldAnalyzerWrapper.getOffsetGap().