@@ -29809,6 +29809,362 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testDeleteUnusedFiles
+specifier|public
+name|void
+name|testDeleteUnusedFiles
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+for|for
+control|(
+name|int
+name|iter
+init|=
+literal|0
+init|;
+name|iter
+operator|<
+literal|2
+condition|;
+name|iter
+operator|++
+control|)
+block|{
+name|Directory
+name|dir
+init|=
+operator|new
+name|MockRAMDirectory
+argument_list|()
+decl_stmt|;
+name|IndexWriter
+name|w
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+operator|new
+name|WhitespaceAnalyzer
+argument_list|()
+argument_list|,
+name|IndexWriter
+operator|.
+name|MaxFieldLength
+operator|.
+name|UNLIMITED
+argument_list|)
+decl_stmt|;
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Field
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"go"
+argument_list|,
+name|Field
+operator|.
+name|Store
+operator|.
+name|NO
+argument_list|,
+name|Field
+operator|.
+name|Index
+operator|.
+name|ANALYZED
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|w
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|IndexReader
+name|r
+decl_stmt|;
+if|if
+condition|(
+name|iter
+operator|==
+literal|0
+condition|)
+block|{
+comment|// use NRT
+name|r
+operator|=
+name|w
+operator|.
+name|getReader
+argument_list|()
+expr_stmt|;
+block|}
+else|else
+block|{
+comment|// don't use NRT
+name|w
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+name|r
+operator|=
+name|IndexReader
+operator|.
+name|open
+argument_list|(
+name|dir
+argument_list|)
+expr_stmt|;
+block|}
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|files
+init|=
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|dir
+operator|.
+name|listAll
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|files
+operator|.
+name|contains
+argument_list|(
+literal|"_0.cfs"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|w
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|w
+operator|.
+name|optimize
+argument_list|()
+expr_stmt|;
+if|if
+condition|(
+name|iter
+operator|==
+literal|1
+condition|)
+block|{
+name|w
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+block|}
+name|IndexReader
+name|r2
+init|=
+name|r
+operator|.
+name|reopen
+argument_list|()
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|r
+operator|!=
+name|r2
+argument_list|)
+expr_stmt|;
+name|files
+operator|=
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|dir
+operator|.
+name|listAll
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|files
+operator|.
+name|contains
+argument_list|(
+literal|"_0.cfs"
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// optimize created this
+name|assertTrue
+argument_list|(
+name|files
+operator|.
+name|contains
+argument_list|(
+literal|"_2.cfs"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|w
+operator|.
+name|deleteUnusedFiles
+argument_list|()
+expr_stmt|;
+name|files
+operator|=
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|dir
+operator|.
+name|listAll
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// r still holds this file open
+name|assertTrue
+argument_list|(
+name|files
+operator|.
+name|contains
+argument_list|(
+literal|"_0.cfs"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|files
+operator|.
+name|contains
+argument_list|(
+literal|"_2.cfs"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|r
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+if|if
+condition|(
+name|iter
+operator|==
+literal|0
+condition|)
+block|{
+comment|// on closing NRT reader, it calls writer.deleteUnusedFiles
+name|files
+operator|=
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|dir
+operator|.
+name|listAll
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|files
+operator|.
+name|contains
+argument_list|(
+literal|"_0.cfs"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+comment|// now writer can remove it
+name|w
+operator|.
+name|deleteUnusedFiles
+argument_list|()
+expr_stmt|;
+name|files
+operator|=
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|dir
+operator|.
+name|listAll
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|files
+operator|.
+name|contains
+argument_list|(
+literal|"_0.cfs"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+name|assertTrue
+argument_list|(
+name|files
+operator|.
+name|contains
+argument_list|(
+literal|"_2.cfs"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|w
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|r2
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 block|}
 end_class
 end_unit
